--- a/SFT.ipynb
+++ b/SFT.ipynb
@@ -18,7 +18,7 @@
     "from datasets import load_dataset\n",
     "from transformers import Trainer\n",
     "import sys\n",
-    "\n",
+    "import os\n",
     "\n",
     "IGNORE_INDEX = -100\n",
     "EOT_TOKEN = \"<|EOT|>\"\n"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "d747cd71-316d-4935-8920-dcd056ce161a",
    "metadata": {},
    "outputs": [],
@@ -169,13 +169,17 @@
     "    )\n",
     "    model_args, data_args, training_args = parser.parse_args_into_dataclasses()\n",
     "\n",
+    "    # Initialize distributed training only if running in distributed mode\n",
+    "    if training_args.local_rank != -1 and os.getenv(\"RANK\") is not None:\n",
+    "        if torch.distributed.is_available() and not torch.distributed.is_initialized():\n",
+    "            torch.distributed.init_process_group(backend=\"nccl\", init_method=\"env://\")\n",
+    "\n",
     "    if training_args.local_rank == 0:\n",
     "        print(\"=\" * 100)\n",
     "        print(training_args)\n",
     "\n",
     "    tokenizer = transformers.AutoTokenizer.from_pretrained(\n",
     "        model_args.model_name_or_path,\n",
-    "        # model_max_length=training_args.model_max_length,\n",
     "        padding_side=\"right\",\n",
     "        use_fast=True,\n",
     "        trust_remote_code=True,\n",
@@ -213,7 +217,9 @@
     "        split=\"train\",\n",
     "        cache_dir=training_args.cache_dir,\n",
     "    )\n",
-    "    if training_args.local_rank > 0:\n",
+    "    \n",
+    "    # Use a safe barrier\n",
+    "    if training_args.local_rank > 0 and torch.distributed.is_initialized():\n",
     "        torch.distributed.barrier()\n",
     "\n",
     "    train_dataset = raw_train_datasets.map(\n",
@@ -222,12 +228,12 @@
     "        batch_size=3000,\n",
     "        num_proc=32,\n",
     "        remove_columns=raw_train_datasets.column_names,\n",
-    "        load_from_cache_file=True,  # not args.overwrite_cache\n",
+    "        load_from_cache_file=True,\n",
     "        desc=\"Running Encoding\",\n",
     "        fn_kwargs={\"tokenizer\": tokenizer},\n",
     "    )\n",
     "\n",
-    "    if training_args.local_rank == 0:\n",
+    "    if training_args.local_rank == 0 and torch.distributed.is_initialized():\n",
     "        torch.distributed.barrier()\n",
     "\n",
     "    if training_args.local_rank == 0:\n",
@@ -251,20 +257,20 @@
     "\n",
     "    trainer.train()\n",
     "    trainer.save_state()\n",
-    "    safe_save_model_for_hf_trainer(trainer=trainer, output_dir=training_args.output_dir)"
+    "    safe_save_model_for_hf_trainer(trainer=trainer, output_dir=training_args.output_dir)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "68da4bef-ab03-4206-8054-7193db19fb46",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "critic_model = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\"\n",
-    "data_path = \"/home/siai/Documents/GitHub/NeSy_Policy_Reasoning/train.jsonl\"\n",
-    "output_path = \"qwen25-sft-1epoch-32b\"\n",
+    "critic_model = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\"\n",
+    "data_path = \"train.jsonl\"\n",
+    "output_path = \"Distill-Qwen-1.5B\"\n",
     "\n",
     "sys.argv = [\n",
     "    \"notebook\",\n",
@@ -294,218 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "10016b8e-e838-4df0-90c2-33465666d621",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "====================================================================================================\n",
-      "TrainingArguments(\n",
-      "_n_gpu=2,\n",
-      "accelerator_config={'split_batches': False, 'dispatch_batches': None, 'even_batches': True, 'use_seedable_sampler': True, 'non_blocking': False, 'gradient_accumulation_kwargs': None, 'use_configured_state': False},\n",
-      "adafactor=False,\n",
-      "adam_beta1=0.9,\n",
-      "adam_beta2=0.999,\n",
-      "adam_epsilon=1e-08,\n",
-      "auto_find_batch_size=False,\n",
-      "average_tokens_across_devices=False,\n",
-      "batch_eval_metrics=False,\n",
-      "bf16=True,\n",
-      "bf16_full_eval=False,\n",
-      "cache_dir=None,\n",
-      "data_seed=None,\n",
-      "dataloader_drop_last=False,\n",
-      "dataloader_num_workers=0,\n",
-      "dataloader_persistent_workers=False,\n",
-      "dataloader_pin_memory=True,\n",
-      "dataloader_prefetch_factor=None,\n",
-      "ddp_backend=None,\n",
-      "ddp_broadcast_buffers=None,\n",
-      "ddp_bucket_cap_mb=None,\n",
-      "ddp_find_unused_parameters=None,\n",
-      "ddp_timeout=1800,\n",
-      "debug=[],\n",
-      "deepspeed=None,\n",
-      "disable_tqdm=False,\n",
-      "dispatch_batches=None,\n",
-      "do_eval=False,\n",
-      "do_predict=False,\n",
-      "do_train=False,\n",
-      "eval_accumulation_steps=None,\n",
-      "eval_delay=0,\n",
-      "eval_do_concat_batches=True,\n",
-      "eval_on_start=False,\n",
-      "eval_steps=None,\n",
-      "eval_strategy=no,\n",
-      "eval_use_gather_object=False,\n",
-      "evaluation_strategy=None,\n",
-      "fp16=False,\n",
-      "fp16_backend=auto,\n",
-      "fp16_full_eval=False,\n",
-      "fp16_opt_level=O1,\n",
-      "fsdp=[],\n",
-      "fsdp_config={'min_num_params': 0, 'xla': False, 'xla_fsdp_v2': False, 'xla_fsdp_grad_ckpt': False},\n",
-      "fsdp_min_num_params=0,\n",
-      "fsdp_transformer_layer_cls_to_wrap=None,\n",
-      "full_determinism=False,\n",
-      "gradient_accumulation_steps=8,\n",
-      "gradient_checkpointing=True,\n",
-      "gradient_checkpointing_kwargs=None,\n",
-      "greater_is_better=None,\n",
-      "group_by_length=False,\n",
-      "half_precision_backend=auto,\n",
-      "hub_always_push=False,\n",
-      "hub_model_id=None,\n",
-      "hub_private_repo=None,\n",
-      "hub_strategy=every_save,\n",
-      "hub_token=<HUB_TOKEN>,\n",
-      "ignore_data_skip=False,\n",
-      "include_for_metrics=[],\n",
-      "include_inputs_for_metrics=False,\n",
-      "include_num_input_tokens_seen=False,\n",
-      "include_tokens_per_second=False,\n",
-      "jit_mode_eval=False,\n",
-      "label_names=None,\n",
-      "label_smoothing_factor=0.0,\n",
-      "learning_rate=2e-05,\n",
-      "length_column_name=length,\n",
-      "load_best_model_at_end=False,\n",
-      "local_rank=0,\n",
-      "log_level=passive,\n",
-      "log_level_replica=warning,\n",
-      "log_on_each_node=True,\n",
-      "logging_dir=qwen25-sft-1epoch-32b/runs/Feb20_18-50-29_siai-4,\n",
-      "logging_first_step=False,\n",
-      "logging_nan_inf_filter=True,\n",
-      "logging_steps=1.0,\n",
-      "logging_strategy=steps,\n",
-      "lr_scheduler_kwargs={},\n",
-      "lr_scheduler_type=cosine,\n",
-      "max_grad_norm=1.0,\n",
-      "max_steps=-1,\n",
-      "metric_for_best_model=None,\n",
-      "model_max_length=2048,\n",
-      "mp_parameters=,\n",
-      "neftune_noise_alpha=None,\n",
-      "no_cuda=False,\n",
-      "num_train_epochs=1.0,\n",
-      "optim=adamw_torch,\n",
-      "optim_args=None,\n",
-      "optim_target_modules=None,\n",
-      "output_dir=qwen25-sft-1epoch-32b,\n",
-      "overwrite_output_dir=False,\n",
-      "past_index=-1,\n",
-      "per_device_eval_batch_size=1,\n",
-      "per_device_train_batch_size=4,\n",
-      "prediction_loss_only=False,\n",
-      "push_to_hub=False,\n",
-      "push_to_hub_model_id=None,\n",
-      "push_to_hub_organization=None,\n",
-      "push_to_hub_token=<PUSH_TO_HUB_TOKEN>,\n",
-      "ray_scope=last,\n",
-      "remove_unused_columns=True,\n",
-      "report_to=['wandb'],\n",
-      "restore_callback_states_from_checkpoint=False,\n",
-      "resume_from_checkpoint=None,\n",
-      "run_name=qwen25-sft-1epoch-32b,\n",
-      "save_on_each_node=False,\n",
-      "save_only_model=False,\n",
-      "save_safetensors=True,\n",
-      "save_steps=20,\n",
-      "save_strategy=steps,\n",
-      "save_total_limit=10,\n",
-      "seed=42,\n",
-      "skip_memory_metrics=True,\n",
-      "split_batches=None,\n",
-      "tf32=None,\n",
-      "torch_compile=False,\n",
-      "torch_compile_backend=None,\n",
-      "torch_compile_mode=None,\n",
-      "torch_empty_cache_steps=None,\n",
-      "torchdynamo=None,\n",
-      "tpu_metrics_debug=False,\n",
-      "tpu_num_cores=None,\n",
-      "use_cpu=False,\n",
-      "use_ipex=False,\n",
-      "use_legacy_prediction_loop=False,\n",
-      "use_liger_kernel=False,\n",
-      "use_mps_device=False,\n",
-      "warmup_ratio=0.0,\n",
-      "warmup_steps=0,\n",
-      "weight_decay=0.0,\n",
-      ")\n",
-      "PAD Token: <｜end▁of▁sentence｜> 151643\n",
-      "BOS Token <｜begin▁of▁sentence｜> 151646\n",
-      "EOS Token <｜end▁of▁sentence｜> 151643\n",
-      "Load tokenizer from deepseek-ai/DeepSeek-R1-Distill-Qwen-7B over.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "458ac1d73815494e9925c202bc3d715d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load model from deepseek-ai/DeepSeek-R1-Distill-Qwen-7B over.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04e587abd3904ced8be6cbbc89258362",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df938c609e3043a98b5a4176624bd930",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running Encoding (num_proc=32):   0%|          | 0/971 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Default process group has not been initialized, please make sure to call init_process_group.",
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_803096/1990237592.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_803096/3675206415.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtraining_args\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocal_rank\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistributed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbarrier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtraining_args\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocal_rank\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/torch/distributed/c10d_logger.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_P\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_P\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0m_T\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m             \u001b[0mmsg_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_get_msg_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/torch/distributed/distributed_c10d.py\u001b[0m in \u001b[0;36mbarrier\u001b[0;34m(group, async_op, device_ids)\u001b[0m\n\u001b[1;32m   4147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4148\u001b[0m     \u001b[0mopts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBarrierOptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4149\u001b[0;31m     \u001b[0mopts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_get_pg_default_device\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4150\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdevice_ids\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4151\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/torch/distributed/distributed_c10d.py\u001b[0m in \u001b[0;36m_get_pg_default_device\u001b[0;34m(group)\u001b[0m\n\u001b[1;32m    769\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    770\u001b[0m     \"\"\"\n\u001b[0;32m--> 771\u001b[0;31m     \u001b[0mgroup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgroup\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_get_default_group\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    772\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mgroup\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_world\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpg_default_device\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    773\u001b[0m         \u001b[0;31m# Previously searched and cached; just return\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/torch/distributed/distributed_c10d.py\u001b[0m in \u001b[0;36m_get_default_group\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1148\u001b[0m     \u001b[0;34m\"\"\"Get the default process group created by init_process_group.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1150\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1151\u001b[0m             \u001b[0;34m\"Default process group has not been initialized, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1152\u001b[0m             \u001b[0;34m\"please make sure to call init_process_group.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Default process group has not been initialized, please make sure to call init_process_group."
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 8\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m model_args, data_args, training_args \u001b[38;5;241m=\u001b[39m parser\u001b[38;5;241m.\u001b[39mparse_args_into_dataclasses()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Initialize distributed training only if running in distributed mode\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m training_args\u001b[38;5;241m.\u001b[39mlocal_rank \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRANK\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mdistributed\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mdistributed\u001b[38;5;241m.\u001b[39mis_initialized():\n\u001b[1;32m     10\u001b[0m         torch\u001b[38;5;241m.\u001b[39mdistributed\u001b[38;5;241m.\u001b[39minit_process_group(backend\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnccl\u001b[39m\u001b[38;5;124m\"\u001b[39m, init_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menv://\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -525,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -539,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
