--- a/Preprocess_isabelle.ipynb
+++ b/Preprocess_isabelle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "def filter_valid_entries(df):\n",
     "    \"\"\"Filter dataset entries to remove invalid data.\"\"\"\n",
     "    # Remove rows where any important column is missing\n",
-    "    df = df.dropna(subset=[\"natural_language_statement\", \"isabelle_translation\"])\n",
+    "    df = df.dropna(subset=[\"natural_language_statement\"])\n",
     "\n",
     "    # Remove problems containing \"<image>\", \"<span\", or weird HTML-like patterns\n",
     "    df = df[\n",
@@ -54,7 +54,7 @@
     "def filter_valid_entries_fevl(df):\n",
     "    \"\"\"Filter dataset entries to remove invalid data.\"\"\"\n",
     "    # Remove rows where any important column is missing\n",
-    "    df = df.dropna(subset=[\"natural_language_statement\", \"isabelle_translation\"])\n",
+    "    df = df.dropna(subset=[\"natural_language_statement\"])\n",
     "\n",
     "    # Remove problems containing \"<image>\", \"<span\", or weird HTML-like patterns\n",
     "    df = df[\n",
@@ -73,9 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: '/data/isabelle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3856813/3856572889.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/data/isabelle\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m# Load dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"kings-crown/Isabelle_SFT\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrust_remote_code\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.10/os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m         \u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m         \u001b[0;31m# Cannot rely on checking for EEXIST, since the operating system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/data/isabelle'"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    os.makedirs(\"/data/isabelle\", exist_ok=True)\n",
@@ -113,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    # Load dataset\n",
-    "    ds = load_dataset(\"kings-crown/Isabelle_SFT\", trust_remote_code=True)\n",
+    "    ds = load_dataset(\"kings-crown/SFT_Isabelle_mvp\", trust_remote_code=True)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\")\n",
     "\n",
     "    for split in ds.keys():\n",
@@ -128,14 +141,16 @@
     "        df[\"task_id\"] = np.arange(len(df))\n",
     "\n",
     "        # Clean text fields\n",
-    "        for col in [\"natural_language_statement\", \"isabelle_translation\", \"formal_proof\", \"isabelle_body\"]:\n",
+    "        #for col in [\"natural_language_statement\", \"isabelle_translation\", \"formal_proof\", \"isabelle_body\"]:\n",
+    "        for col in [\"natural_language_statement\", \"formal_proof\"]:\n",
     "            df[col] = df[col].apply(clean_text)\n",
     "\n",
     "        # Filter dataset to remove problematic entries\n",
     "        df = filter_valid_entries(df)\n",
     "\n",
     "        # Select only relevant fields\n",
-    "        df = df[[\"task_id\", \"natural_language_statement\", \"isabelle_translation\", \"formal_proof\", \"isabelle_body\"]]\n",
+    "        #df = df[[\"task_id\", \"natural_language_statement\", \"isabelle_translation\", \"formal_proof\", \"isabelle_body\"]]\n",
+    "        df = df[[\"task_id\", \"natural_language_statement\", \"formal_proof\"]]\n",
     "\n",
     "        # Deduplicate by `natural_language_statement`\n",
     "        df = df.drop_duplicates(subset=[\"natural_language_statement\"])\n",
