--- a/SFT.ipynb
+++ b/SFT.ipynb
@@ -270,7 +270,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "critic_model = \"deepseek-ai/DeepSeek-Prover-V1.5-Base\"\n",
+    "critic_model = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\"\n",
     "data_path = \"train.jsonl\"\n",
     "output_path = \"Distill-Qwen-1.5B\"\n",
     "\n",
@@ -636,7 +636,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
